# wcnes-project2025

./: README.md
SPI_test/: main.c
analysis/: results1.txt  results2.txt
baseband/: backscatter.pio  flash.sh  main.c
carrier-CC2500/: flash.sh  main.c
carrier-Firefly/: README.md
carrier-baseband/: flash.sh  main.c
carrier-receiver-baseband/: CMakeLists.txt  README.md  bt_2455_0_test1  bt_2455_1_test1  bt_2455_3_test1  bt_2455_5_test1  bt_2455_75_test1  bt_2455_78_test1  bt_2455_78_test2  bt_2455_79_test1  bt_2455_7_test1  bt_2455_81_test1  bt_2455_82_test1  bt_2455_83_test1  bt_2455_84_test1  bt_2455_85_test1  bt_2455_8_test1  bt_2455_8_test2  bt_2455_8_test3  bt_2455_9_test1  bt_2456_0_test1  bt_2456_0_test2  bt_2456_0_test3  bt_2456_1_test1  bt_2456_1_test2  bt_2456_2_test1  bt_2456_3_test1  bt_2456_3_test2  bt_2456_4_test1  bt_2456_4_test2  bt_2456_5_test1  bt_2456_5_test2  bt_2456_6_test1  bt_2456_6_test2  bt_2456_6_test3  bt_2456_7_test1  bt_2456_7_test2  bt_2456_8_test1  bt_2456_8_test2  bt_2456_9_test1  (+25 more)
carrier-receiver-baseband-spi/: main.c
g10_project/: CMakeLists.txt  README.md  flash.sh  main.c
matlab_scripts/: experiments_home_data.mat  home_data_plots.m  quad_array.mat
new_baseband/: flash.sh  main.c
oqpsk-rust/pico_qpsk/: README.md
project_pico_libs/: backscatter.c  backscatter.h  packet_generation.c  packet_generation.h  receiver_CC2500.h
stats/: Untitled.ipynb  dump_analysis.py  functions.py  hamming_ber_analyzer.py  log.txt  performance_one.py  performance_three.py  performance_two.py  statistics.ipynb  tmp_gengraph.py
(+149 files in other folders)
